# C.-Game-of-Life

./: CMakeLists.txt  gameoflife.c
